
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logguard"
version = "0.0.1"
description = "Automatic redaction utilities for logging to prevent sensitive data leaks"
readme = "README.md"
authors = [{name = "Auto Generated", email = "noreply@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["logging","redaction","security","sensitive","privacy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security :: Privacy",
]
