
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logguard"
version = "2.0.0"
description = "Automatic redaction utilities for logging to prevent sensitive data leaks"
readme = "README.md"
authors = [{name = "Syed Rakesh Uddin", email = "syedrakeshuddin@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["logging","redaction","security","sensitive","privacy"]
